[tool.poetry]
name = "instachatico-test"
version = "0.1.0"
description = ""
authors = ["Mikhail Denisov <denisovmvtmb@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standart"], version = "^0.116.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
